--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,17 @@ thiserror = "2"
 image = "0.25"
 rusb = "0.9"
 log = { version = "0.4", optional = true }
+rand = "0.8"
+
+[dependencies.ctrlc]
+version = "3"
+optional = true
 
 [features]
-default = ["std"]
+default = ["std", "ctrlc"]
 std = []
 logging = ["log"]
+ctrlc = ["dep:ctrlc"]
 
 [lib]
 name = "electron_bot"
